ci(pseo): add workflow concurrency + write perms for nightly page generation
- Add top-level concurrency group (pseo-pages-${{ github.workflow }}-${{ github.ref }}) to prevent overlapping runs
- Set cancel-in-progress: false so in-progress nightly builds finish cleanly
- Grant permissions: contents: write so GITHUB_TOKEN can commit & push generated pages
- No changes to generator logic or schedule

--- a/.github/workflows/pseo.yml
+++ b/.github/workflows/pseo.yml
@@ -3,8 +3,15 @@ name: pSEO Pages
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 18 * * *"
+    - cron: "0 18 * * *"    # 18:00 UTC == 23:30 IST daily
 
+permissions:
+  contents: write          # required for git push with GITHUB_TOKEN
+
+concurrency:
+  group: pseo-pages-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false   # don't kill a run that's already generating pages
+  
 jobs:
   build:
     runs-on: ubuntu-latest
