--- a/.github/workflows/pseo.yml
+++ b/.github/workflows/pseo.yml
@@ -1,6 +1,8 @@
 name: pSEO Pages
 
 on:
+  push:
+    branches: [ main ]
   workflow_dispatch:
   schedule:
     - cron: "0 18 * * *"    # 18:00 UTC == 23:30 IST daily
@@ -27,14 +29,16 @@ jobs:
           PSEO_EPS: "0.6"
           PSEO_MIN_SAMPLES: "2"
           PSEO_DRY_RUN: "0"
-      - name: Generate sitemap & robots
+      - name: Generate sitemap, robots, manifest
         run: python scripts/pseo/update_sitemap.py
       - name: Commit and push if changed
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          if ! git diff --quiet; then
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add -A
-            git commit -m "chore(pseo): generate blog pages [skip ci]"
+            git commit -m "chore(site-indexes): refresh sitemap/robots/manifest [skip ci]"
             git push
+          else
+            echo "No changes to commit."
           fi
