Add/update GitHub Actions workflow to deploy Cloudflare Workers

--- a/.github/workflows/deploy-workers.yml
+++ b/.github/workflows/deploy-workers.yml
@@ -13,6 +13,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - name: Setup Wrangler
+        run: npm install -g wrangler@4.58.0
       - name: Deploy Workers
         uses: cloudflare/wrangler-action@v3
         with:
