--- a/.github/workflows/deploy-workers.yml
+++ b/.github/workflows/deploy-workers.yml
@@ -1,35 +1,30 @@
-name: Deploy Cloudflare Workers
+name: Deploy to Cloudflare Workers
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
 
-      - name: Install Wrangler CLI
-        run: npm install -g wrangler@4.58.0
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build --if-present
 
       - name: Publish to Cloudflare Workers
-        env:
-          CF_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: |
-          # wrangler will pick up account id from wrangler.toml if present
-          if [ -f wrangler.toml ]; then
-            wrangler publish
-          else
-            wrangler publish --account-id $CLOUDFLARE_ACCOUNT_ID
-          fi
+        uses: cloudflare/wrangler-action@1.5.0
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          workingDirectory: ./
