--- a/.github/workflows/deploy-workers.yml
+++ b/.github/workflows/deploy-workers.yml
@@ -1,35 +1,11 @@
-name: Deploy Cloudflare Workers
-
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'        # <- updated to Node 20 (required by wrangler)
-
-      - name: Install Wrangler CLI
-        run: npm install -g wrangler@4.58.0
-
       - name: Publish to Cloudflare Workers
         env:
-          CF_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
           # wrangler will pick up account id from wrangler.toml if present
           if [ -f wrangler.toml ]; then
-            wrangler publish
+            wrangler deploy
           else
-            wrangler publish --account-id $CLOUDFLARE_ACCOUNT_ID
+            wrangler deploy --account-id $CLOUDFLARE_ACCOUNT_ID
           fi
