--- a/.github/workflows/deploy-workers.yml
+++ b/.github/workflows/deploy-workers.yml
@@ -1,9 +1,42 @@
-      - name: Publish to Cloudflare Workers
+name: Deploy Cloudflare Workers
+
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build (if present)
+        run: npm run build --if-present
+
+      - name: Install Wrangler CLI
+        # pin a known-compatible version to avoid surprises
+        run: npm install -g wrangler@4.58.0
+
+      - name: Deploy with Wrangler
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
-          # wrangler will pick up account id from wrangler.toml if present
+          # show installed wrangler version for debugging
+          wrangler --version || true
+          # run deploy; if wrangler.toml exists it will pick account_id automatically
           if [ -f wrangler.toml ]; then
             wrangler deploy
           else
