--- a/.github/workflows/deploy-workers.yml
+++ b/.github/workflows/deploy-workers.yml
@@ -20,16 +20,22 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
+            echo "Lockfile found — using npm ci"
+            npm ci
+          else
+            echo "No lockfile found — using npm install"
+            npm install
+          fi
 
       - name: Build (if present)
         run: npm run build --if-present
 
       - name: Install Wrangler CLI
-        # pin a known-compatible version to avoid surprises
         run: npm install -g wrangler@4.58.0
 
-      - name: Deploy with Wrangler
+      - name: Publish to Cloudflare Workers
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
