--- a/vcard-qr-next/package.json
+++ b/vcard-qr-next/package.json
@@ -13,6 +13,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.97.0",
     "clsx": "^2.1.1",
+    "dotenv": "^17.3.1",
     "lucide-react": "^0.574.0",
     "next": "^15.1.6",
     "qrcode.react": "^4.2.0",
