--- a/.github/workflows/seo-autopilot.yml
+++ b/.github/workflows/seo-autopilot.yml
@@ -3,7 +3,7 @@ name: SEO Autopilot
 on:
   schedule:
     # Runs at 00:00 UTC every day
-    - cron: '0 0 * * *'
+    # - cron: '0 0 * * *'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
