--- a/.github/workflows/deploy-workers.yml
+++ b/.github/workflows/deploy-workers.yml
@@ -21,16 +21,23 @@ jobs:
 
       - name: Install dependencies
         run: |
-          if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
-            echo "Lockfile found — using npm ci"
+          if [ ! -f package.json ]; then
+            echo "No package.json in repo root - skipping npm install"
+          elif [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
+            echo "Lockfile found - using npm ci"
             npm ci
           else
-            echo "No lockfile found — using npm install"
+            echo "No lockfile found - using npm install"
             npm install
           fi
 
       - name: Build (if present)
-        run: npm run build --if-present
+        run: |
+          if [ -f package.json ]; then
+            npm run build --if-present
+          else
+            echo "No package.json in repo root - skipping build"
+          fi
 
       - name: Install Wrangler CLI
         run: npm install -g wrangler@4.58.0
